--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
     VICTORY!
     <span class="overlay-text-small">Click to Restart</span>
   </div>
-
   <div class="game-container">
     <div class="game-info-container">
       <div class="game-info">
         Time <span id="time-remaining">20</span>
       </div>
-
       <div class="game-info">
         Cups <span id="cups">0</span>
       </div>
@@ -47,7 +45,9 @@
         </div>
         <div class="drop-container"></div>
       </div>
-
+      <a href="https://matthijsvannistelrooij.github.io/Robert/">Easy</a>
+      <a href="https://matthijsvannistelrooij.github.io/RobertMedium/">Medium</a>
+      <a href="https://matthijsvannistelrooij.github.io/RobertHard/">Hard</a>
     </div>
 
     <audio id="dropSound">
