--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Roberts Game - Level: Hard</title>
+  <title>Roberts Game - Level: Medium</title>
 </head>
 <body>
   <div class="overlay-text visible">
